--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "8.11.1"
 cloudinaryAndroid = "2.5.0"
 cloudinaryCore = "1.34.0"
 firebaseBom = "33.16.0"
+firebaseMessaging = "24.1.2"
 flexbox = "3.0.0"
 glide = "4.16.0"
 gridlayout = "1.1.0"
@@ -34,6 +35,7 @@ cloudinary-android = { module = "com.cloudinary:cloudinary-android", version.ref
 cloudinary-core = { module = "com.cloudinary:cloudinary-core", version.ref = "cloudinaryCore" }
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-messaging = { module = "com.google.firebase:firebase-messaging", version.ref = "firebaseMessaging" }
 flexbox = { module = "com.google.android.flexbox:flexbox", version.ref = "flexbox" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 google-firebase-auth = { module = "com.google.firebase:firebase-auth" }
