--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
                 android:value=".MainActivity" />
         </activity>
 
+        <activity
+            android:name=".features.admin.ui.ReportDetailsActivity"
+            android:exported="false" />
+
         <service
             android:name=".core.services.TradeUpFirebaseMessagingService"
             android:exported="false">
